# virtuepot

./: .gitmodules  README.md  docker-compose.yml  init.sh  restart_docker_containers.sh  tcpdump_start.sh  tcpdump_stop.sh
.github/workflows/: zip.yml  zip_file.yml
arkime/: .env  Dockerfile  README.md  docker-compose.env  docker-compose.yml
arkime/arkime_docker/: Dockerfile
arkime/scripts/: arkime-parse-pcap-folder.sh  startarkime.sh
bottlefactory/: Dockerfile  docker-compose.yml
bottlefactory/ics-docker/: Dockerfile
bottlefactory/src/: start.sh
chemicalplant/: build.sh
doc/: arkime.md  docker.md  honeyd.md  icssim.md  malcolm.md  openplc.md  scada.md
honeyd/: Dockerfile  Siemens-S7-1200.py  docker-compose.yml  honeyd.conf
log/: log analysis.ipynb  log.ipynb
malcolm/: malcolm_20221103_113516_92dde186.README.txt
scada/: docker-compose.yml  export.json
scada/scada-docker/: Dockerfile
watertank/: README.md  docker-compose.yml
watertank/gateway/: Dockerfile  requirements.txt
watertank/hmi/: Dockerfile  app.py  docker_entrypoint.sh  gunicorn.sh  requirements.txt  tcp_modbus.py
watertank/openplc/: Dockerfile  PLC1.st  honeyd.conf  launch.sh  run.sh  signatures.sh
watertank/openplc-program/: README.md  mbconfig.cfg  plc.xml  simple-control.st  simple-control3.st  watertank.st
watertank/openplc_sim/: Dockerfile  requirements.txt  tcp_modbus.py
watertank/server/: .dockerignore  Cargo.toml  Dockerfile
watertank/server/src/: lib.rs  main.rs
zeek/: docker-compose.yml
zeek/elastic/: local.zeek
zeek/filebeat/: Dockerfile
(+8 files in other folders)
